buildscript {
    ext {
        springBootVersion = '2.5.6'
        jacocoVersion = '0.8.11'
    }

    repositories {
        mavenCentral()
    }

    
}

plugins {
    id 'org.springframework.boot' version '2.5.6'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
    id 'idea'
    id 'org.sonarqube' version '4.4.1.3373'
    
    id 'eclipse'
    id 'jacoco'
    // Gradle license plugin switched to an obscure plugin
    // because the popular plugin stopped working with all recent gradle versions
    // https://github.com/hierynomus/license-gradle-plugin/issues/179
   // id 'org.cadixdev.licenser' version '0.6.1'
}


sourceCompatibility = JavaVersion.VERSION_17

if (project.hasProperty('profile')
        && project.getProperty('profile') == 'deployable') {
    apply from: 'profile-deployable.gradle'
} else {
    apply from: 'profile-standalone.gradle'
}

repositories {
    mavenCentral()
    maven { url "https://repo.spring.io/libs-release" }
    maven { url "https://repository.jboss.org/nexus/content/repositories/releases" }
    maven { url "https://fynarfin.jfrog.io/artifactory/fyn-libs-release-local"}
}

//license {
//    header = project.file('./LICENSE.md')
//    skipExistingHeaders = true
//    exclude '**/*.html'
//    exclude '**/*.mustache'
//    exclude '**/package-info.java'
//    exclude '**/keystore.jks'
//}


dependencies {
    implementation("org.springframework.boot:spring-boot-starter-web:2.5.5")
    implementation("org.springframework.boot:spring-boot-starter-actuator:2.5.2")
    implementation("org.springframework.boot:spring-boot-starter-data-jpa:2.5.2")
    implementation("org.flywaydb:flyway-core:6.4.0")
    implementation('org.apache.velocity:velocity:1.7')
    implementation('com.squareup.okhttp:okhttp:2.0.0')
    implementation('com.squareup.okhttp:okhttp-urlconnection:2.0.0')
    implementation('com.squareup.retrofit:retrofit:1.6.1')
    implementation('com.twilio.sdk:twilio:7.1.0')
    implementation('org.drizzle.jdbc:drizzle-jdbc:1.3')
    implementation('com.infobip:infobip-api-java-client:1.1.0')
    implementation('com.telerivet:TelerivetAPIClient:1.4.6')
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.6.0'
    implementation 'org.json:json:20210307'
    testImplementation("org.springframework.boot:spring-boot-starter-test")
}

wrapper {
    gradleVersion = '7.3'
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

// Configuration for the sonarqube plugin is now in GitHub Actions
sonar {
    properties {
        property("sonar.projectKey", "one-acre-fund_message-gateway")
        property("sonar.organization", "one-acre-fund")
        property("sonar.token", System.getenv("SONAR_TOKEN"))
        property("sonar.host.url", "https://sonarcloud.io")
        property("sonar.projectBaseDir", "${project.projectDir}")
        property("sonar.java.binaries", "${project.projectDir}/build/classes/java/main")
        property("sonar.coverage.jacoco.xmlReportPaths", "$buildDir/reports/jacoco/test/jacocoTestReport.xml")
        property("sonar.newCode.period", "previous_version")
        property("sonar.newCode.referenceBranch", "main")
    }
}

jacoco {
    toolVersion = jacocoVersion
    reportsDirectory = file("$buildDir/reports/jacoco")
}

jacocoTestReport {
    reports {
        html.required = true
        xml.required = true
        html.destination file("${buildDir}/code-coverage")
    }
}